--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^5.12.1",
     "expo": "~39.0.2",
     "expo-status-bar": "~1.0.2",
+    "firebase": "^8.0.0",
     "native-base": "^2.13.14",
     "react": "16.13.1",
     "react-dom": "16.13.1",
