--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
+    "react-native-swipe-list-view": "^3.2.5",
+    "react-native-swipeable-row": "^0.8.1",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.3",
     "react-navigation-drawer": "^2.6.0",
